--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "4c9c6a6d-950f-4a31-a7f2-3fd0955c25a4"
   },
   "newProjectRoot": "projects",
   "projects": {
